tests/negative/gold/assign5_test.gold
tests/negative/assign5_test.toit:9:5: error: Can't assign to 'super' in constructor
    super = 22
    ^~~~~
Compilation failed.
